# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/inputmethod/imf/inputmethod.gni")
import("//build/ohos.gni")

config("inputmethod_client_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/common",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/services/dfx/include",
    "${inputmethod_path}/services/include",
    "${resourceschedule_ffrt_path}/interfaces/kits",
  ]
}

config("inputmethod_client_native_public_config") {
  visibility = [ "./*" ]
  include_dirs = [
    "include",
    "${inputmethod_path}/frameworks/common",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/include",
    "${inputmethod_path}/frameworks/native/inputmethod_ability/include",
    "${inputmethod_path}/interfaces/inner_api/inputmethod_ability/include",
    "${inputmethod_path}/services/include",
    "${inputmethod_path}/services/dfx/include",
    "${resourceschedule_ffrt_path}/interfaces/kits",
  ]
}

ohos_shared_library("inputmethod_client") {
  sources = [
    "${inputmethod_path}/frameworks/native/inputmethod_ability/src/input_method_agent_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_client_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_client_stub.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_data_channel_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_data_channel_stub.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_death_recipient.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_controller.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_system_ability_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_utils.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/itypes_util.cpp",
    "${inputmethod_path}/services/src/message.cpp",
    "${inputmethod_path}/services/src/message_handler.cpp",
  ]

  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-Os",
  ]

  version_script = "inputmethod_client.versionscript"

  innerapi_tags = [ "platformsdk" ]

  deps = [ "${inputmethod_path}/services/dfx:inputmethod_dfx_static" ]

  public_deps = [ "${inputmethod_path}/services/dfx:inputmethod_dfx_static" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  configs = [ ":inputmethod_client_native_config" ]

  public_configs = [ ":inputmethod_client_native_public_config" ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}

ohos_static_library("inputmethod_client_static") {
  testonly = true
  sources = [
    "${inputmethod_path}/frameworks/native/inputmethod_ability/src/input_method_agent_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_client_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_client_stub.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_data_channel_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_data_channel_stub.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_death_recipient.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_controller.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_system_ability_proxy.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/input_method_utils.cpp",
    "${inputmethod_path}/frameworks/native/inputmethod_controller/src/itypes_util.cpp",
    "${inputmethod_path}/services/src/message.cpp",
    "${inputmethod_path}/services/src/message_handler.cpp",
  ]

  public_configs = [ ":inputmethod_client_native_public_config" ]

  public_deps = [ "${inputmethod_path}/services/dfx:inputmethod_dfx_static" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "inputmethod"
  part_name = "imf"
}
